assets/css/admin.css
/* SportsPress admin styles */
.post-state-format.post-format-calendar:before, .post-format-icon.post-format-calendar:before, a.post-state-format.format-calendar:before {
	content: "\f145";
}

.post-state-format.post-format-league:before, .post-format-icon.post-format-league:before, a.post-state-format.format-league:before {
	content: "\f313";
}

.post-state-format.post-format-friendly:before, .post-format-icon.post-format-friendly:before, a.post-state-format.format-friendly:before {
	content: "\f328";
}

.post-state-format.post-format-roster:before, .post-format-icon.post-format-roster:before, a.post-state-format.format-roster:before {
	content: "\f307";
}

.post-state-format.post-format-list:before, .post-format-icon.post-format-list:before, a.post-state-format.format-list:before {
	content: "\f163";
}

.post-state-format.post-format-blocks:before, .post-format-icon.post-format-blocks:before, a.post-state-format.format-blocks:before {
	content: "\f164";
}

.sp-dummy {
	display: none;
}

#sp_videodiv .inside > fieldset > p:first-child {
	margin-top: 7px !important;
}

#sp_videodiv .inside > fieldset > p:last-child {
	margin-bottom: 1px !important;
}

.sp-link:before {
	font: normal 20px/1 'dashicons';
	speak: none;
	display: inline-block;
	padding: 0 2px 0 0;
	top: 0;
	left: -1px;
	position: relative;
	vertical-align: top;
	-webkit-font-smoothing: antialiased;
	-moz-osx-font-smoothing: grayscale;
	text-decoration: none !important;
	content: "\f504";
}

.fixed .column-sp_team .result,
.sp-calendar-table .result {
	background: #888;
	color: #fff;
	font-size: 11px;
	font-weight: 600;
	text-align: center;
	height: 1.4em;
	line-height: 1.4em;
	min-width: .7em;
	padding: 0 6px;
	display: inline-block;
	-webkit-border-radius: 2px;
	border-radius: 2px;
	cursor: pointer;
}

.fixed .column-sp_team .result:hover,
.sp-calendar-table .result:hover {
	background: #2ea2cc;
}

.fixed .column-sp_format,
.fixed .column-sp_icon,
.fixed .column-sp_number {
	width: 2.3em;
	text-align: center;
}

.fixed tbody .column-sp_icon {
	padding-top: 12px;
}

.fixed .column-sp_time {
	width: 6%;
}

.post-type-sp_event .fixed .column-sp_league,
.post-type-sp_calendar .fixed .column-sp_league,
.post-type-sp_event .fixed .column-sp_season,
.post-type-sp_calendar .fixed .column-sp_season,
.post-type-sp_event .fixed .column-sp_venue,
.post-type-sp_calendar .fixed .column-sp_venue,
.post-type-sp_player .fixed .column-sp_position {
	width: 10%;
}

.fixed td.column-sp_format .dashicons:before {
	color: #888;
}

/* Settings */
.sportspress table.form-table, .sportspress table.form-table .forminp-radio ul {
	margin: 0;
}

.sportspress table.form-table .forminp-radio ul  li {
	display: inline;
	margin-right: 20px;
}

.sportspress table.form-table .forminp-radio ul  li label.post-format-icon {
	margin-top: 0 !important;
}

.sportspress table.form-table fieldset {
	margin-top: 4px;
}

.sportspress table.form-table fieldset:first-child {
	margin-top: 0;
}

.sportspress table.form-table fieldset p.description {
	margin-bottom: 8px;
}

.sp-admin-config-table .edit {
	text-align: right;
}

.sportspress table.form-table .sp-color-box {
	border: 1px solid #ccc;
	box-shadow: 1px 1px 3px rgba(0,0,0,.2);
	-webkit-box-shadow: 1px 1px 3px rgba(0,0,0,.2);
	-moz-box-shadow: 1px 1px 3px rgba(0,0,0,.2);
	-webkit-border-radius: 3px;
	-moz-border-radius: 3px;
	border-radius: 3px;
	padding: 4px 6px;
	float: left;
	width: 90px;
	margin: 0 10px 10px 0;
}

.sportspress table.form-table .sp-color-box strong {
	text-align: left;
	display: block;
	padding: 0 0 2px;
	font-size: .92em;
	word-wrap: break-word;
}

.sportspress table.form-table .sp-color-box input.colorpick {
	width: 100%;
	margin: 0;
	font-family: monospace;
	-webkit-box-sizing: border-box;
	-moz-box-sizing: border-box;
	box-sizing: border-box;
}

.sportspress table.form-table .sp-color-box .iris-picker {
	z-index: 100;
	position: absolute;
	display: none;
	border: 1px solid #ccc;
	box-shadow: 1px 1px 3px rgba(0,0,0,.2);
	-webkit-box-shadow: 1px 1px 3px rgba(0,0,0,.2);
	-moz-box-shadow: 1px 1px 3px rgba(0,0,0,.2);
	-webkit-border-radius: 3px;
	-moz-border-radius: 3px;
	border-radius: 3px;
	margin: 15px 0 0 -7px;
}

.sportspress table.form-table #sportspress_custom_css {
	font-family: monospace;
}

.sp-data-table-container {
	clear: both;
}

table.widefat.sp-data-table img {
	vertical-align: top;
}

table.widefat.sp-data-table th.column-outcome {
	width: 10em;
}

table.widefat.sp-data-table th,
table.widefat.sp-data-table td {
	padding-right: 0;
}
table.widefat.sp-data-table th:last-child,
table.widefat.sp-data-table td:last-child {
	padding-right: 10px;
}

table.widefat.sp-data-table td {
	line-height: 2;
	overflow: visible;
}

table.widefat.sp-data-table td:first-child {
	white-space: nowrap;
}

table.widefat.sp-data-table th.icon,
table.widefat.sp-data-table td.icon {
	width: 1px;
}

table.widefat.sp-data-table th.icon span,
table.widefat.sp-data-table td.icon span {
	margin-right: 0;
}

table.widefat.sp-data-table input[type="text"],
table.widefat.sp-data-table input[type="number"] {
	min-width: 1.25em;
	width: 100%;
}

table.widefat.sp-data-table input.small-text {
	width: 50px;
	min-width: 0;
}

table.widefat.sp-data-table input.name {
	min-width: 0;
	width: auto;
}

table.widefat.sp-data-table a.dashicons {
	cursor: pointer;
	height: 27px;
	line-height: 27px;
}

table.widefat.sp-data-table a.sp-edit {
	-moz-opacity: 0;
	opacity: 0;
	-ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
}

table.widefat.sp-data-table tr:hover a.sp-edit {
	-moz-opacity: 1;
	opacity: 1;
	-ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=100)";
}

table.widefat.sp-data-table th:not(.check-column) input[type=checkbox] {
	margin: -4px 1px 0;
	vertical-align: middle;
}

table.widefat select.sp-outcome {
	width: 100%;
}

table.widefat.sp-sortable-table tbody tr .icon {
	cursor: move;
}

table.widefat.sp-sortable-table tr {
	background-color: #fff;
}

table.widefat.sp-sortable-table tr:nth-child(2n-1) {
	background-color: #f9f9f9;
}

.sp-admin-config-table th,
.sp-admin-config-table td {
	padding: 8px 10px;
}

.sp-admin-config-table th.radio,
.sp-admin-config-table td.radio,
.sp-admin-config-table th.icon,
.sp-admin-config-table td.icon {
	width: 1%;
	text-align: center;
}

.sp-admin-config-table th.radio input[type=radio],
.sp-admin-config-table td.radio input[type=radio] {
	margin: 0;
	vertical-align: middle;
}

#sp_venue-adder h4,
#sp_team-adder h4,
#sp_season-adder h4,
#sp_player-adder h4,
#sp_position-adder h4 {
	margin: 10px 0;
}

.form-field .sp-location-picker {
	width: 95%;
	height: 320px;
}

/* Chosen */
.chosen-container-single .chosen-single {
	-webkit-border-radius: 3px;
	border-radius: 3px;
	color: #555;
	border-color: #ccc;
	background: #f7f7f7;
	-webkit-box-shadow: inset 0 1px 0 #fff,0 1px 0 rgba(0,0,0,.08);
	box-shadow: inset 0 1px 0 #fff,0 1px 0 rgba(0,0,0,.08);
}

.chosen-container-active .chosen-single {
	border-color: #999;
	background: #fff;
}

.chosen-container-active.chosen-with-drop .chosen-single {
	background: #fff;
}

.chosen-container-single .chosen-drop {
	-webkit-border-radius: 0 0 3px 3px;
	border-radius: 0 0 3px 3px;
}

.chosen-container-multi .chosen-choices {
	background: #fff;
	color: #333;
	padding: 3px 0;
	border-color: #ddd;
	box-shadow: inset 0 1px 2px rgba(0,0,0,.07);
	line-height: 2;
}

.chosen-container-multi .chosen-choices li.search-field input[type="text"] {
	color: #a9a9a9;
	height: auto;
}

.chosen-container-multi .chosen-choices li.search-choice {
	color: #555;
	border-color: #ccc;
	background: #f7f7f7;
	-webkit-box-shadow: inset 0 1px 0 #fff,0 1px 0 rgba(0,0,0,.08);
	box-shadow: inset 0 1px 0 #fff,0 1px 0 rgba(0,0,0,.08);
	vertical-align: top;
}

.chosen-container-multi .chosen-choices li.search-choice:hover {
	background: #fafafa;
	border-color: #999;
	color: #222;
}

.chosen-container-multi .chosen-choices li.search-choice .search-choice-close {
	transition: none;
	-webkit-transition: none;
}

/* TipTip */
.tips {
	cursor: help;
}

#tiptip_holder {
	display: none;
	position: absolute;
	top: 0;
	left: 0;
	z-index: 99999;
}

#tiptip_holder.tip_top {
	padding-bottom: 5px;
}

#tiptip_holder.tip_bottom {
	padding-top: 5px;
}

#tiptip_holder.tip_right {
	padding-left: 5px;
}

#tiptip_holder.tip_left {
	padding-right: 5px;
}

#tiptip_content {
	font-size: 11px;
	color: #fff;
	padding: .5em;
	background: #464646;
	-webkit-border-radius: 3px;
	-moz-border-radius: 3px;
	border-radius: 3px;
	-webkit-box-shadow: 1px 1px 3px rgba(0,0,0,.1);
	-moz-box-shadow: 1px 1px 3px rgba(0,0,0,.1);
	box-shadow: 1px 1px 3px rgba(0,0,0,.1);
	text-align: center;
}

#tiptip_arrow, #tiptip_arrow_inner {
	position: absolute;
	border-color: transparent;
	border-style: solid;
	border-width: 6px;
	height: 0;
	width: 0;
}

#tiptip_holder.tip_top #tiptip_arrow {
	border-top-color: #fff;
	border-top-color: rgba(255,255,255,0.25);
}

#tiptip_holder.tip_bottom #tiptip_arrow {
	border-bottom-color: #fff;
	border-bottom-color: rgba(255,255,255,0.25);
}

#tiptip_holder.tip_right #tiptip_arrow {
	border-right-color: #fff;
	border-right-color: rgba(255,255,255,0.25);
}

#tiptip_holder.tip_left #tiptip_arrow {
	border-left-color: #fff;
	border-left-color: rgba(255,255,255,0.25);
}

#tiptip_holder.tip_top #tiptip_arrow_inner {
	margin-top: -7px;
	margin-left: -6px;
	border-top-color: #464646;
}

#tiptip_holder.tip_bottom #tiptip_arrow_inner {
	margin-top: -5px;
	margin-left: -6px;
	border-bottom-color: #464646;
}

#tiptip_holder.tip_right #tiptip_arrow_inner {
	margin-top: -6px;
	margin-left: -5px;
	border-right-color: #464646;
}

#tiptip_holder.tip_left #tiptip_arrow_inner {
	margin-top: -6px;
	margin-left: -7px;
	border-left-color: #464646;
}

#debug-report {
	display: none;
	margin: 10px 0;
	padding: 0;
	position: relative;
}

#debug-report textarea {
	font-family: monospace;
	width: 100%;
	margin: 0;
	height: 300px;
	padding: 20px;
	-moz-border-radius: 0;
	-webkit-border-radius: 0;
	border-radius: 0;
	resize: none;
	font-size: 12px;
	line-height: 20px;
	outline: 0;
}

table.sp_status_table td mark {
	background: transparent none;
}

table.sp_status_table td mark.yes {
	color: #7ad03a;
}

/* Importers */
#import-upload-form table.form-table th,
#import-upload-form table.form-table td {
	padding-bottom: 0;
}
#import-upload-form table.form-table tbody tr:last-child td {
	padding-bottom: 20px;
}
.sp-import-table th,
.sp-import-table td {
	padding-right: 0;
}
.sp-import-table th:last-child,
.sp-import-table td:last-child {
	padding-right: 10px;
}
.sp-import-table tbody tr:nth-child(2n-1) {
	background: #f9f9f9;
}
.sp-import-table select {
	max-width: 100%;
}
.sp-import-table .sp-actions-column {
	width: 40px;
	text-align: right;
}
.sp-import-table .sp-add-row {
	line-height: 1.5;
}
.sp-import-table .sp-delete-row {
	font-size: 16px;
	line-height: 1.5;
	color: #a00;
}
.sp-import-table .sp-delete-row:hover {
	color: #f00;
}

/* Media Queries */
@media only screen and (max-width: 782px) {

	.fixed .column-sp_time,
	.fixed .column-sp_team,
	.fixed .column-sp_league,
	.fixed .column-sp_season,
	.fixed .column-sp_venue,
	.fixed .column-sp_position,
	.fixed .column-sp_player {
		display: none;
	}

	.form-field .sp-location-picker {
		width: 99%;
	}
	.form-field td .sp-location-picker {
		width: 100%;
	}

}

